example/src/main/webapp/WEB-INF/views/error/503.html.mustache
<h3>503 Service Unavailable</h3>
<hr/>

<p>
Please try later.
</p>
